# lib_3d_mec_ginac

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  lib_3d_mec_ginac.pc  lib_3d_mec_ginac.pc.in  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
examples/100_pendulums/: main_symbolic.bash  main_symbolic.cc
examples/100_pendulums/solids/: pieza_1.STL  pieza_3.STL  solid_0.stl  solid_2.stl  solid_3.stl
examples/4bar/: compile_numeric.bash  main_symbolic.cc
examples/4bar/GENERATED_OSG_bin/: config.ini  main_numeric_osg
examples/4bar/GENERATED_files_bin/: main_symbolic
examples/4bar/GENERATED_files_graphics/: coordinates.gnuplot
examples/4bar/GENERATED_files_matlab/: Beta.m  BetaInit.m  Energy.m  Gamma.m  M.m  MQ.m  Output.m  Phi.m  PhiInit.m  PhiInit_q.m  Phi_q.m  Q.m  dPhiInit_dq.m  dPhi_dq.m  environment.m
examples/4bar/GENERATED_files_process_c_h/: Beta.c  Beta.h  BetaInit.c  BetaInit.h  Energy.c  Gamma.c  Gamma.h  M.c  M.h  MQ.c  MQ.h  Output.c  Phi.c  Phi.h  PhiInit.c  PhiInit.h  PhiInit_q.c  PhiInit_q.h  Phi_q.c  Phi_q.h  Q.c  Q.h  dPhiInit_dq.c  dPhiInit_dq.h  dPhi_dq.c  dPhi_dq.h  gen_accel.c  gen_accel.h  gen_coord.c  gen_coord.h  gen_vel.c  gen_vel.h  inputs.c  inputs.h  param.c  param.h  read_data_file.c  read_data_file.h  time_3D_mec.h  unknowns.h  (+1 more)
examples/DSM/: main_OSG.bash  main_symbolic.bash  main_symbolic.cc  main_symbolic_auxcoords.cc
examples/DSM/SOURCE_matlab/: DSM_discrete.mdl  c_s_func_continuous.mexglx  lin_alg.mexglx  main_mex.m  untitled.mdl.autosave
examples/DSM/solids/: arm2.stl  ellipse.stl  plane.stl
examples/DSM2/GENERATED_OSG_bin/: config.ini  main_numeric_osg
examples/DSM_SLIDING/: main_symbolic.cc
examples/Dzhanibekov/: main_symbolic.bash  main_symbolic.cc
examples/Rostock/: main_symbolic.cc
examples/Segway_Inputs/: main_symbolic.bash  main_symbolic.cc  main_symbolicNoRider.cc
examples/WINDTURBINE_final/: main_numeric_OSG.bash  main_symbolic.bash  main_symbolic.cc  main_symbolicNEW.cc  main_symbolic_corregido.cc
examples/block_pendulum/: main_symbolic.cc
examples/car/: .point_diagram.tex.swp  compile_numeric_with_OSG_CAR.bash  compile_numeric_with_OSG_car.bash-old  main_symbolic.bash  main_symbolic.cc  output_list.txt
examples/double_pendulum/: compile_numeric.bash  main_symbolic.bash  main_symbolic.cc
examples/four_bar/: main_symbolic.bash  main_symbolic.cc
examples/hexaglide_recursive/: filereader.py  hexa_L1.mat  hexa_L1.txt  hexa_add.mat  hexa_add.txt  hexa_ele.mat  hexa_ele.txt  hexa_qr.mat  hexa_qr.txt  main_symbolic.cc
examples/hexaglide_roberto/: main_symbolic.bash  main_symbolic.cc
examples/hexaglide_xabier/: M.mat  NolinPhi2_python.py  W_optim_python.py  atoms.txt  filereader.py  hexa_add.mat  hexa_ele.mat  hexa_ele.txt  hexa_qr.mat  hexaglide.fig  hexaglide.mat  main_symbolic.cc  main_symbolic.cc.backup  main_symbolic_hexaglide_for_inertia_parameters_reference.cc  makefile  makefile.backup  out.txt  out_add.txt  out_ele.txt  out_qr.txt  parametros_modelo_reducido_hexaglide.ods
examples/puma_recursive/: Instrucciones.txt  filereader.py  main_symbolic.cc  op_counter.py  puma_L1.mat  puma_L1.txt  puma_add.mat  puma_add.txt  puma_ele.mat  puma_ele.txt  puma_qr.mat  puma_qr.txt
examples/puma_xabier/: jarl.cc  main_symbolic  main_symbolic.cc  main_symbolic.cc.backup  main_symbolic_generated.cc  puma_data.txt
examples/scooter/: .c  .mpl  Scooter_preproc.mec.txt  atoms.txt  main_symbolic.bash  main_symbolic.cc
examples/simple_pendulum/: compile_numeric.bash  compile_numeric_with_OSG.bash  main_symbolic.bash  main_symbolic.cc
examples/stewart/: compile_numeric_with_OSG.bash  main_symbolic.bash  main_symbolic.cc
examples/train_complete/: OLD_compile_numeric_with_OSG_TRAIN.bash  atoms.txt  compile_numeric_train.bash  compile_numeric_trainOPT.bash  compile_numeric_with_OSG_TRAIN.bash  kaka.txt  main_symbolic.bash  main_symbolic_v6.cc  main_symbolic_v7  main_symbolic_v7.cc  main_symbolic_v72.cc  main_symbolic_v7bis.cc  main_symbolic_v8.cc  main_symbolic_v80.cc  main_symbolic_v81.cc  main_symbolic_v82  main_symbolic_v82.cc  testUPDOWN.txt  times.txt
examples/train_complete_2D/: main_numeric.bash  main_numeric_OSG.bash  main_symbolic.bash  main_symbolic_2D.cc
examples/train_proto/: main_numeric.bash  main_symbolic.bash  main_symbolic.cc
examples/triciclo/: .h  compile_numeric.bash  compile_numeric_with_OSG_tricicle.bash  main_numeric_osg_tricicle.cc  main_symbolic.cc
examples/wheel_rail/: HOWTO.txt  atoms.txt  compile_numeric_train.bash  compile_numeric_with_OSG.bash  compile_numeric_with_OSG_TRAIN.bash  compile_numeric_with_OSG_TRAIN.bash-OLD  compile_numeric_with_OSG_TRAIN_OLD.bash  kaka.txt  main_numeric_OSG.bash  main_numeric_OSG_TRAIN.bash  main_numeric_osg_train.cc  main_symbolic.cc  main_symbolic_train.bash  main_symbolic_v10.cc  main_symbolic_v20.cc  main_symbolic_v30.cc  main_symbolic_v31.cc  main_symbolic_v40.cc  main_symbolic_v50.cc  main_symbolic_v60.cc  main_symbolic_v61.cc  octave-workspace  parallel.py
lib_3d_mec_ginac/: Base.cc  Base.lo  Drawing3D.cc  Drawing3D.lo  Frame.cc  Frame.lo  Globals.cc  Globals.h  Globals.lo  Globals_OLD20150830.cc  Globals_OLD20150830.h  Makefile  Makefile.am  Makefile.in  Matrix.cc  Matrix.h  Matrix.lo  Point.cc  Solid.cc  Solid.lo  System.cc  System.h  System.lo  Tensor3D.cc  Tensor3D.h  Tensor3D.lo  Vector3D.cc  Vector3D.h  Vector3D.lo  VectorE.cc  VectorE.h  VectorE.lo  Wrench3D.cc  Wrench3D.h  Wrench3D.lo  atom.cc  atom.lo  lib_3d_mec_ginac-2.0.la  symbol_numeric.cc  symbol_numeric.lo
lib_3d_mec_ginac/.deps/: Base.Plo  Drawing3D.Plo  Frame.Plo  Globals.Plo  Matrix.Plo  Point.Plo  Solid.Plo  System.Plo  Tensor3D.Plo  Torsor3D.Plo  Vector3D.Plo  VectorE.Plo  Wrench3D.Plo  atom.Plo  symbol_numeric.Plo
lib_3d_mec_ginac/.libs/: lib_3d_mec_ginac-2.0.la  lib_3d_mec_ginac-2.0.lai
(+2144 files in other folders)
